@startuml
'https://plantuml.com/class-diagram
hide circle
class PlansRepository <<interface>>

title Class Diagram / As marketing director, I want to promote a plan

class Plans {
    -name
    -description
    -numberOfMinutes
    -maximumNumberOfUsers
    -musicCollection
    -musicSuggestion
    -annualFee
    -monthlyFee
    -active
    -promoted
    -feeRevision
    -deleted
    +promote(final long desiredVersion): void
}

class PromotionResult {
    -newPromotedPlan
    -previousPromotedPlan
}

class PlansViewMapper {
    +toPlansView(Plans plans): PlansView
}

class PlansController {
    +promote(final WebRequest request, final String name): ResponseEntity<PromotionResultView>
}

class PlansService {
    +promote(final String name, final long desiredVersion): PromotionResult
}

interface PlansRepository {
    +findByName_Name(String name): Optional<Plans>
    +findByPromoted_Promoted(boolean promoted): Optional<Plans>
    +<S extends T> S save(S entity)
}

PlansController --> PlansService: uses
PlansService --> PlansRepository: uses
PlansRepository --> Plans: <<record>>
PlansService --> Plans: uses
PlansService --> PromotionResult: uses
PlansController --> PlansViewMapper: uses

@enduml
